# ReachCompress

./: .gitignore  .gitmodules  CMakeLists.txt  CompresstoDAG.py  Doxyfile  GenerateGraph.py  README.md  ReachCompress.tar  cal_SCC_CC.py  cal_ratio.py  config.ini  convertTabToSpace.py  convertToCSV.py  convertToDAG.py  convertToob.py  detectCommunicity-Louvain.py  detectCommunicity-leidenalg.py  detectCommunicity.py  distance_query_generate.py  distance_query_generate_reachable.py  generate_hypergraph.py  memory_test.sh  min_cut.py  no_zero_degree.py  temp.py
Components/: cit-DBLP_DAG_strong_components.txt  cit-DBLP_strong_components.txt  email-dnc_edges_strong_components.txt  gene_edges_20241029_135003_strong_components.txt  gene_edges_20241031_163820_strong_components.txt  ia-radoslaw-email_edges_strong_components.txt  moreno_health_unweighted_strong_components.txt  soc-epinions_strong_components.txt  soc-sign-bitcoinotc_strong_components.txt  wiki-Vote_strong_components.txt  wikipedia_link_so_strong_components.txt
Dataset_citations/moreno_health/: url
Dataset_citations/soc-Epinions/: url
Dataset_citations/soc-sign-bitcoinotc/: url
Dataset_citations/wikipedia_link_so/: README.wikipedia_link_so  meta.wikipedia_link_so  url
Dataset_citations/wikivote/: url
Edges/: test_123456_2  test_SCC_1
Edges/DAGmapping/: cit-DBLP_mapping
Edges/DAGs/: Slashdot0811_DAG.txt  gene_edges_20241029_135003_DAG  gene_edges_20241029_135003_mapping
Edges/Hyper/: Hyper_test1  random_hypergraph  random_hypergraph_2  random_hypergraph_3  random_hypergraph_4  random_hypergraph_4_lds_k1_ds.idx  random_hypergraph_4_lds_k3_ds.idx  random_hypergraph_4_pll.idx  random_hypergraph_4hypergraph_tree_index_SizeOnly  test1
Edges/generate/: edges_20240929_115202.txt  gene_edges_20241029_135549  gene_edges_20241029_140725  gene_edges_20241029_141907  test_123456  test_123456_2
Edges/medium/: email-dnc_edges  gene_edges_20241031_163820  ia-radoslaw-email_edges.txt  wiki-Vote  wikipedia_link_so
HyperGraphs/: urls
IndexCache/: test_hypergraph_tree_index
Partitions/: cit-DBLP_partitions.txt  cit-DBLP_partitions_louvain.txt  cit-DBLP_partitions_mincut.txt  edges_20240929_115202_partitions.txt  edges_20240929_115202_partitions_leiden.txt  email-dnc_edges_partitions.txt  email-dnc_edges_partitions_louvain.txt  email-dnc_edges_partitions_mincut.txt  gene_edges_20241029_135003_partitions.txt  gene_edges_20241029_135003_partitions_louvain.txt  gene_edges_20241029_135003_partitions_mincut.txt  gene_edges_20241031_163820_partitions.txt  gene_edges_20241031_163820_partitions_louvain.txt  gene_edges_20241031_163820_partitions_mincut.txt  ia-radoslaw-email_edges_partitions.txt  ia-radoslaw-email_edges_partitions_louvain.txt  ia-radoslaw-email_edges_partitions_mincut.txt  livejournal_rr.txt  moreno_health_unweighted_partitions.txt  moreno_health_unweighted_partitions_louvain.txt  moreno_health_unweighted_partitions_mincut.txt  soc-epinions_partitions.txt  soc-sign-bitcoinotc_partitions.txt  soc-sign-bitcoinotc_partitions_louvain.txt  soc-sign-bitcoinotc_partitions_mincut.txt  test_123456_2_partitions.txt  test_123456_2_partitions_leiden.txt  test_123456_partitions.txt  test_123456_partitions_leiden.txt  test_SCC_1_partitions.txt  test_SCC_1_partitions_leiden.txt  wiki-Vote_partitions.txt  wiki-Vote_partitions_louvain.txt  wiki-Vote_partitions_mincut.txt  wikipedia_link_so_partitions.txt  wikipedia_link_so_partitions_louvain.txt  wikipedia_link_so_partitions_mincut.txt
QueryPairs/: WikiTalk_edgelist_DAG_distance_pairs.txt  email-dnc_edges_distance_pairs  email-dnc_edges_distance_pairs_reachable  gene_edges_20241029_135003_distance_pairs  gene_edges_20241031_163820_distance_pairs  soc-sign-bitcoinotc_distance_pairs  test_123456_2_distance_pairs  wiki-Vote_distance_pairs  wikipedia_link_so_distance_pairs
converted_csv_files/: gene_edges_20241029_135003.csv  gene_edges_20241029_135549.csv  gene_edges_20241029_140725.csv  gene_edges_20241029_141907.csv  gene_edges_20241031_163820.csv
include/: AddEdge.h  Algorithm.h  BiBFSCSR.h  BidirectionalBFS.h  BloomFilter.h  CSR.h  CommunityDetection.h  CompressedSearch.h  GraphPartitioner.h  Hypergraph.h  HypergraphTreeIndex.h  InfomapPartitioner.h  InputHandler.h  LouvainPartitioner.h  NodeEmbedding.cpp  NodeEmbedding.h  OutputHandler.h  PartionPLL.h  PartitionManager.h  RandomUtils.h  ReachRatio.h  ReachRatioPartitioner.h  SetSearch.h  SimplexReader.h  TreeCover.h  UWeightedPLL.h  UndirectedPLL.h  WeightedGraph.h  cal_ratio.h  compression.h  graph.h  graph_pruner.h  pll.h
result/: 135003_2hoplabels_origin  135003_2hoplabels_pruned  135003_seed42_query100  242101  gene_edges_20241029_135003_origin  gene_edges_20241029_135003_pruned  gene_edges_20241029_141907_origin  gene_edges_20241029_141907_pruned  test_123456_2_origin  test_123456_2_pruned  test_123456_origin  test_123456_pruned
scripts/: partitions_compute.py  visual.py
src/: BidirectionalBFS.cpp  CMakeLists.txt  CSR.cpp  CommunityDetection.cpp  CompressedSearch.cpp  ImportPartitioner.cpp  InfomapPartitioner.cpp  LouvainPartitioner.cpp  PII2.cpp  PartitionManager.cpp  ReachRatio.cpp  ReachRatioPartitioner.cpp  cal_ratio.cpp  compression.cpp  graph.cpp  graph_pruner.cpp  input_handler.cpp  main.cpp  output_handler.cpp  pll.cpp  pll.cpp.bak
src/filters/: BloomFilter.cpp  TreeCover.cpp
src/partitioner/: ImportPartitioner.cpp  LabelPropagationPartitioner.cpp  LouvainPartitioner.cpp  MultiCutPartition.cpp  MultiCutPartitioner.cpp  RandomPartitioner.cpp  ReachRatioPartitioner.cpp  TraversePartitioner.cpp
src/search/: BiBFSCSR.cpp  BidirectionalBFS.cpp  CompressedSearch.cpp  SetSearch.cpp  pll.cpp
src/struct/: CSR.cpp  PartitionManager.cpp  graph.cpp
src/utils/: ReachRatio.cpp  cal_ratio.cpp  input_handler.cpp  output_handler.cpp
test/: CMakeLists.txt  main.cpp  test.cpp  test_CSR.cpp  test_bi_bfs.cpp  test_bloom.cpp  test_comp.cpp  test_graph.cpp  test_hyper.cpp  test_part.cpp  test_part_reach.cpp  test_parti.cpp  test_pll.cpp  test_pruner.cpp  test_ratio.cpp  test_set_reach.cpp  test_tree_cover.cpp
(+42 files in other folders)
